--- a/index.html
+++ b/index.html
@@ -11,12 +11,93 @@
     <link rel="stylesheet" href="/assets/css/base.css">
     <link rel="stylesheet" href="/assets/css/style.css">
 
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <!-- header -->
+    <div class="header">
+        <div class="header_logo">
+            <a href="index.html">
+                <img src="https://fullstack.edu.vn/assets/f8-icon-lV2rGpF0.png" alt="">
+            </a>
+            <a href="">
+                Học lập trình
+            </a>
+        </div>
+        <div class="header_body">
+            <ul>
+                <li>
+                    <a href="#" class="selected">
+                        Trang chủ
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Khóa học
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Lộ trình
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Tư vấn
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Phản hồi
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="header_login">
+            <a href="#">
+                Đăng kí
+            </a>
+            <button class="btn_normal text-white">
+                Đăng nhập
+            </button>
+        </div>
+        <div class="header_menu">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </div>
 
+    <!-- carousel -->
+    <div id="myCarousel" class="carousel carousel-dark slide container" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="/assets/image/img-1.jpeg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="/assets/image/img-2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="/assets/image/img-3.png" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev bg-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next bg-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
 
-
+    </div>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
