--- a/homepage.html
+++ b/homepage.html
@@ -68,6 +68,35 @@
         <div class="header_menu">
             <i class="fa-solid fa-bars"></i>
         </div>
+        <div class="dropdown hide">
+            <ul>
+                <li>
+                    <a href="homepage.html" class="">
+                        Trang chủ
+                    </a>
+                </li>
+                <li>
+                    <a href="about.html" class="">
+                        Giới thiệu
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Sản phẩm
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Tin tức
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Liên hệ
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
     <!-- start -->
     <div class="start">
