--- a/about.html
+++ b/about.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/base.css">
     <link rel="stylesheet" href="/assets/css/about.css">
-    <link rel="stylesheet" href="/assets/css/header_footer.css">
-</head>
+
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" </head>
 
 <body>
     <!-- header -->
@@ -37,22 +40,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Đội hình
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
+                    <a href="product.html">
                         Sản phẩm
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="news.html">
                         Tin tức
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="contact.html">
                         Liên hệ
                     </a>
                 </li>
@@ -69,12 +67,41 @@
         <div class="header_menu">
             <i class="fa-solid fa-bars"></i>
         </div>
+        <div class="dropdown hide">
+            <ul>
+                <li>
+                    <a href="homepage.html" class="">
+                        Trang chủ
+                    </a>
+                </li>
+                <li>
+                    <a href="about.html" class="">
+                        Giới thiệu
+                    </a>
+                </li>
+                <li>
+                    <a href="product.html">
+                        Sản phẩm
+                    </a>
+                </li>
+                <li>
+                    <a href="news.html">
+                        Tin tức
+                    </a>
+                </li>
+                <li>
+                    <a href="contact.html">
+                        Liên hệ
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="start">
         <div class="fill"></div>
         <div class="start_body">
             <h1>
-                Về chúng tôi
+                Giới thiệu
             </h1>
             <blockquote>
                 T1 Esports là một trong những đội tuyển Liên Minh Huyền Thoại (LMHT) nổi tiếng và thành công nhất thế
@@ -86,7 +113,39 @@
         </div>
     </div>
 
+    <div class="intro">
+        <div class="container">
+            <h2>Giới thiệu về T1</h2>
+            <p>
+                T1 là một đội tuyển Esports hàng đầu thế giới, đặc biệt nổi tiếng trong tựa game Liên Minh Huyền Thoại
+                (LOL). Được thành lập vào năm 2004, T1 đã trở thành biểu tượng của sự xuất sắc, kỷ luật và đam mê trong
+                làng
+                Esports. Với lịch sử hào hùng và nhiều danh hiệu, chúng tôi không chỉ là một đội tuyển mà còn là nguồn
+                cảm
+                hứng cho hàng triệu người hâm mộ toàn cầu.
+                <br>
+                Tại T1, chúng tôi tin rằng Esports không chỉ là một bộ môn thể thao mà còn là cầu nối văn hóa, cộng đồng
+                và sự sáng tạo. Chúng tôi luôn nỗ lực
+                truyền cảm hứng: Mang đến niềm đam mê và khát khao chiến thắng.
+                Đổi mới Dẫn đầu trong việc áp dụng công nghệ và chiến thuật.
+                Gắn kết Tạo nên cộng đồng Esports bền vững.
+            </p>
+            <br>
 
+            <h3>Hành trình huyền thoại</h3>
+            <p>
+                2004: Thành lập dưới tên SK Telecom T1.<br>
+                2013: Lần đầu vô địch CKTG (Chung Kết Thế Giới LOL).<br>
+                2015 & 2016: Trở thành đội tuyển đầu tiên giành 3 chức vô địch CKTG, một kỳ tích chưa từng có.<br>
+                2024: vô địch CKTG
+                Hiện tại: Với tầm nhìn dẫn đầu, T1 tiếp tục là một thế lực đáng gờm, không ngừng đổi mới và chinh phục
+                thử
+                thách.
+            </p>
+        </div>
+    </div>
+
+    <!-- goal -->
     <div class="goal">
         <div class="container">
             <div class="wrapper">
@@ -132,116 +191,79 @@
             </div>
         </div>
     </div>
+
     <!-- trainer -->
     <div class="trainers">
         <div class="container">
             <div class="wrapper">
-                <h2>Huấn luyện viên trưởng</h2>
+                <h2 class="text-center">Đội hình chính</h2>
                 <div class="items">
                     <div class="item">
                         <div class="item_avatar">
-                            <img src="/assets/image/koma.webp" alt="">
+                            <img src="/assets/image/doran.webp" alt="">
                         </div>
                         <div class="item_name">
-                            KoMa
+                            Doran
                         </div>
                         <div class="item_position">
-                            HLV trưởng
+                            Top
                         </div>
-                        <ul class="item_social">
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-facebook-f"></i>
-                                </li>
-                            </a>
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-youtube"></i>
-                                </li>
-                            </a>
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-tiktok"></i>
-                                </li>
-                            </a>
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-instagram"></i>
-                                </li>
-                            </a>
-                        </ul>
                         <button class="item_contact">
                             Xem thêm
                         </button>
                     </div>
                     <div class="item">
                         <div class="item_avatar">
-                            <img src="/assets/image/jack.jpg" alt="">
+                            <img src="/assets/image/o.png" alt="">
                         </div>
                         <div class="item_name">
-                            Đào Việt Anh
+                            Oner
                         </div>
                         <div class="item_position">
-                            Business Analyst
+                            Jungle
                         </div>
-                        <ul class="item_social">
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-facebook-f"></i>
-                                </li>
-                            </a>
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-youtube"></i>
-                                </li>
-                            </a>
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-tiktok"></i>
-                                </li>
-                            </a>
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-instagram"></i>
-                                </li>
-                            </a>
-                        </ul>
                         <button class="item_contact">
                             Xem thêm
                         </button>
                     </div>
                     <div class="item">
                         <div class="item_avatar">
-                            <img src="/assets/image/img-1.jpg" alt="">
+                            <img src="/assets/image/f.png" alt="">
                         </div>
                         <div class="item_name">
-                            Nguyễn Ngọc Thạch
+                            Faker
                         </div>
                         <div class="item_position">
-                            Frontend Developer
+                            Mid
                         </div>
-                        <ul class="item_social">
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-facebook-f"></i>
-                                </li>
-                            </a>
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-youtube"></i>
-                                </li>
-                            </a>
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-tiktok"></i>
-                                </li>
-                            </a>
-                            <a href="">
-                                <li>
-                                    <i class="fa-brands fa-instagram"></i>
-                                </li>
-                            </a>
-                        </ul>
+                        <button class="item_contact">
+                            Xem thêm
+                        </button>
+                    </div>
+                    <div class="item">
+                        <div class="item_avatar">
+                            <img src="/assets/image/gu.jpg" alt="">
+                        </div>
+                        <div class="item_name">
+                            Gumayusi
+                        </div>
+                        <div class="item_position">
+                            Ad
+                        </div>
+                        <button class="item_contact">
+                            Xem thêm
+                        </button>
+                    </div>
+                    <div class="item">
+                        <div class="item_avatar">
+                            <img src="/assets/image/k.webp" alt="">
+                        </div>
+                        <div class="item_name">
+                            keria
+                        </div>
+                        <div class="item_position">
+                            Support
+                        </div>
                         <button class="item_contact">
                             Xem thêm
                         </button>
