--- a/copy.html
+++ b/copy.html
@@ -37,22 +37,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Đội hình
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
+                    <a href="product.html">
                         Sản phẩm
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="news.html">
                         Tin tức
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="contact.html">
                         Liên hệ
                     </a>
                 </li>
