--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,11 @@
     <!-- Add CSS file -->
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/header_footer.css">
-
+    <link rel="stylesheet" href="/assets/css/contact.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 
 </head>
 
@@ -38,22 +41,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Đội hình
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
+                    <a href="product.html">
                         Sản phẩm
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="news.html">
                         Tin tức
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="contact.html">
                         Liên hệ
                     </a>
                 </li>
@@ -70,11 +68,97 @@
         <div class="header_menu">
             <i class="fa-solid fa-bars"></i>
         </div>
+        <div class="dropdown hide">
+            <ul>
+                <li>
+                    <a href="homepage.html" class="">
+                        Trang chủ
+                    </a>
+                </li>
+                <li>
+                    <a href="about.html" class="">
+                        Giới thiệu
+                    </a>
+                </li>
+                <li>
+                    <a href="product.html">
+                        Sản phẩm
+                    </a>
+                </li>
+                <li>
+                    <a href="news.html">
+                        Tin tức
+                    </a>
+                </li>
+                <li>
+                    <a href="contact.html">
+                        Liên hệ
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+
+    <!-- start -->
+    <div class="start">
+        <div class="fill"></div>
+        <div class="start_body">
+            <h1>
+                Liên hệ
+            </h1>
+            <blockquote>
+                Liên hệ với chúng tôi để có thể biết thêm thông tin và mọi thắc mắc về sản phẩm
+            </blockquote>
+            <button class="text-white">
+                Liên hệ ngay
+            </button>
+        </div>
     </div>
 
 
+    <div class="form">
+        <div class="container">
+            <form action="" id="form-contact">
+                <div class="row">
+                    <div class="form-group col-12 col-md-6">
+                        <label for="firstName">Họ </label>
+                        <input type="text" class="form-control" id="firstName" placeholder="Địa chỉ">
+                        <span class="form-message"></span>
+                    </div>
+                    <div class="form-group col-12 col-md-6">
+                        <label for="lastName">Tên</label>
+                        <input type="text" class="form-control" id="lastName" placeholder="Địa chỉ">
+                        <span class="form-message"></span>
+                    </div>
+                    <div class="form-group col-12">
+                        <label for="address">Địa chỉ</label>
+                        <input type="text" class="form-control" id="address" placeholder="Địa chỉ">
+                        <span class="form-message"></span>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Email">
+                        <span class="form-message"></span>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="phone">Số điện thoại</label>
+                        <input type="text" class="form-control" id="phone" placeholder="Số điện thoại">
+                        <span class="form-message"></span>
+                    </div>
 
-
+                    <div class="form-group col-12">
+                        <label for="note">Ghi chú</label>
+                        <textarea class="form-control" id="note" rows="3"></textarea>
+                        <span class="form-message"></span>
+                    </div>
+                    <button class="btn_primary mx-auto" style="cursor: pointer;" id="submit" type="submit">
+                        Gửi
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
     <!-- footer -->
     <div class="footer">
         <div class="container">
@@ -114,6 +198,24 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- my js -->
+    <script src="/assets/js/header.js"></script>
+    <script src="/assets/js/validator.js"></script>
+
+    <script>
+        var option = {
+            form_id: '#form-contact',
+            rules: [
+                validator.isEmail('#email'),
+                validator.isRequired('#address', 'địa chỉ'),
+                validator.isRequired('#firstName', 'Họ'),
+                validator.isRequired('#lastName', 'Tên'),
+                validator.isRequired('#phone', 'số điện thoại')
+            ]
+        }
+        validator(option)
+    </script>
 </body>
 
 </html>
