--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/base.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/header_footer.css">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
         integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
@@ -41,17 +40,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="product.html">
                         Sản phẩm
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="news.html">
                         Tin tức
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="contact.html">
                         Liên hệ
                     </a>
                 </li>
@@ -81,17 +80,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="product.html">
                         Sản phẩm
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="news.html">
                         Tin tức
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="contact.html">
                         Liên hệ
                     </a>
                 </li>
