--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
     <title>Giới thiệu</title>
 
     <!-- Add CSS file -->
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/about.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/about.css">
 
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
@@ -21,7 +21,7 @@
     <div class="header">
         <div class="header_logo">
             <a href="homepage.html">
-                <img src="/assets/image/T1logo_square.webp" alt="">
+                <img src="assets/image/T1logo_square.webp" alt="">
             </a>
             <a href="" style="font-size: 24px;color:white">
                 T1
@@ -153,7 +153,7 @@
                     <h2>Giá Trị Cốt Lõi</h2>
                     <div class="item">
                         <div class="item_logo">
-                            <img src="/assets/image/icon-2.avif" alt="">
+                            <img src="assets/image/icon-2.avif" alt="">
                         </div>
                         <div class="item_body">
                             <h3 class="title">Đội Ngũ Xuất Sắc</h3>
@@ -164,7 +164,7 @@
                     </div>
                     <div class="item">
                         <div class="item_logo">
-                            <img src="/assets/image/icon-1.jpg" alt="">
+                            <img src="assets/image/icon-1.jpg" alt="">
                         </div>
                         <div class="item_body">
                             <h3 class="title">Tinh Thần Không Bỏ Cuộc</h3>
@@ -175,7 +175,7 @@
                     </div>
                     <div class="item">
                         <div class="item_logo">
-                            <img src="/assets/image/icon-4.jpg" alt="">
+                            <img src="assets/image/icon-4.jpg" alt="">
                         </div>
                         <div class="item_body">
                             <h3 class="title">Hỗ Trợ Cộng Đồng</h3>
@@ -186,7 +186,7 @@
                     </div>
                 </div>
                 <div class="right">
-                    <img src="/assets/image/cup.webp" alt="">
+                    <img src="assets/image/cup.webp" alt="">
                 </div>
             </div>
         </div>
@@ -200,7 +200,7 @@
                 <div class="items">
                     <div class="item">
                         <div class="item_avatar">
-                            <img src="/assets/image/doran.webp" alt="">
+                            <img src="assets/image/doran.webp" alt="">
                         </div>
                         <div class="item_name">
                             Doran
@@ -214,7 +214,7 @@
                     </div>
                     <div class="item">
                         <div class="item_avatar">
-                            <img src="/assets/image/o.png" alt="">
+                            <img src="assets/image/o.png" alt="">
                         </div>
                         <div class="item_name">
                             Oner
@@ -228,7 +228,7 @@
                     </div>
                     <div class="item">
                         <div class="item_avatar">
-                            <img src="/assets/image/f.png" alt="">
+                            <img src="assets/image/f.png" alt="">
                         </div>
                         <div class="item_name">
                             Faker
@@ -242,7 +242,7 @@
                     </div>
                     <div class="item">
                         <div class="item_avatar">
-                            <img src="/assets/image/gu.jpg" alt="">
+                            <img src="assets/image/gu.jpg" alt="">
                         </div>
                         <div class="item_name">
                             Gumayusi
@@ -256,7 +256,7 @@
                     </div>
                     <div class="item">
                         <div class="item_avatar">
-                            <img src="/assets/image/k.webp" alt="">
+                            <img src="assets/image/k.webp" alt="">
                         </div>
                         <div class="item_name">
                             keria
@@ -280,7 +280,7 @@
         <div class="container">
             <div class="wrapper">
                 <div class="wrapper_img">
-                    <img src="/assets/image/logo.png" alt="">
+                    <img src="assets/image/logo.png" alt="">
                 </div>
                 <ul>
                     <li><a href="contact.html">Thông tin liên hệ</a></li>
@@ -315,10 +315,10 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- my js -->
-    <script src="/assets/js/header.js"></script>
+    <script src="assets/js/header.js"></script>
 </body>
 
 </html>
