--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     <title>Giới thiệu</title>
 
     <!-- Add CSS file -->
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/contact.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
         integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
@@ -22,7 +22,7 @@
     <div class="header">
         <div class="header_logo">
             <a href="homepage.html">
-                <img src="/assets/image/T1logo_square.webp" alt="">
+                <img src="assets/image/T1logo_square.webp" alt="">
             </a>
             <a href="" style="font-size: 24px;color:white">
                 T1
@@ -164,7 +164,7 @@
         <div class="container">
             <div class="wrapper">
                 <div class="wrapper_img">
-                    <img src="/assets/image/logo.png" alt="">
+                    <img src="assets/image/logo.png" alt="">
                 </div>
                 <ul>
                     <li><a href="contact.html">Thông tin liên hệ</a></li>
@@ -197,11 +197,11 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- my js -->
-    <script src="/assets/js/header.js"></script>
-    <script src="/assets/js/validator.js"></script>
+    <script src="assets/js/header.js"></script>
+    <script src="assets/js/validator.js"></script>
 
     <script>
         var option = {
