--- a/copy.html
+++ b/copy.html
@@ -7,9 +7,9 @@
     <title>Homepage</title>
 
     <!-- Add CSS file -->
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -18,7 +18,7 @@
     <div class="header">
         <div class="header_logo">
             <a href="homepage.html">
-                <img src="/assets/image/T1logo_square.webp" alt="">
+                <img src="assets/image/T1logo_square.webp" alt="">
             </a>
             <a href="" style="font-size: 24px;color:white">
                 T1
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="wrapper">
                 <div class="wrapper_img">
-                    <img src="/assets/image/logo.png" alt="">
+                    <img src="assets/image/logo.png" alt="">
                 </div>
                 <ul>
                     <li><a href="contact.html">Thông tin liên hệ</a></li>
@@ -107,10 +107,10 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- my js -->
-    <script src="/assets/js/header.js"></script>
+    <script src="assets/js/header.js"></script>
 </body>
 
 </html>
