--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="header">
         <div class="header_logo">
             <a href="homepage.html">
-                <img src="/assets/image/T1logo_square.webp" alt="">
+                <img src="assets/image/T1logo_square.webp" alt="">
             </a>
             <a href="" style="font-size: 24px;color:white">
                 T1
@@ -128,14 +128,14 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="/assets/image/cs-1.webp" alt="Second slide">
+                            <img class="d-block w-100" src="assets/image/cs-1.webp" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="/assets/image/cs-2.jpeg" alt="First slide">
+                            <img class="d-block w-100" src="assets/image/cs-2.jpeg" alt="First slide">
                         </div>
 
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="/assets/image/cs-3.jpg" alt="Third slide">
+                            <img class="d-block w-100" src="assets/image/cs-3.jpg" alt="Third slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev bg-control" href="#myCarousel" role="button" data-slide="prev">
@@ -190,7 +190,7 @@
             <div class="news_main">
                 <div class="box">
                     <div class="box_img">
-                        <img src="/assets/image/new-1.png" alt="">
+                        <img src="assets/image/new-1.png" alt="">
                     </div>
                     <a href="">
                         Chỉ với một biểu ngữ, T1 đã thể hiện sức mạnh vượt trội so với các đối thủ trong LCK
@@ -198,7 +198,7 @@
                 </div>
                 <div class="box">
                     <div class="box_img">
-                        <img src="/assets/image/new-2.jpg" alt="">
+                        <img src="assets/image/new-2.jpg" alt="">
                     </div>
                     <a href="">
                         CEO T1 chia sẻ đội tuyển bị "chơi xỏ" bởi người đại diện Zeus
@@ -206,7 +206,7 @@
                 </div>
                 <div class="box">
                     <div class="box_img">
-                        <img src="/assets/image/new-3.jpg" alt="">
+                        <img src="assets/image/new-3.jpg" alt="">
                     </div>
                     <a href="">
                         Các kỷ lục mới mà Faker và đồng đội vừa thiết lập tại CKTG 2024
@@ -224,7 +224,7 @@
 
                     <div class="item">
                         <div class="item_image">
-                            <img src="/assets/image/pro-1.webp" alt="">
+                            <img src="assets/image/pro-1.webp" alt="">
                         </div>
                         <h3>2024 T1 Worlds Uniform Jacket</h3>
                         <h4>
@@ -242,7 +242,7 @@
                     </div>
                     <div class="item">
                         <div class="item_image">
-                            <img src="/assets/image/pro-2.webp" alt="">
+                            <img src="assets/image/pro-2.webp" alt="">
                         </div>
                         <h3>2024 T1 Worlds Uniform Jacket</h3>
                         <h4>
@@ -260,7 +260,7 @@
                     </div>
                     <div class="item">
                         <div class="item_image">
-                            <img src="/assets/image/pro-3.webp" alt="">
+                            <img src="assets/image/pro-3.webp" alt="">
                         </div>
                         <h3>2024 T1 Worlds Uniform Jacket</h3>
                         <h4>
@@ -278,7 +278,7 @@
                     </div>
                     <div class="item">
                         <div class="item_image">
-                            <img src="/assets/image/pro-4.webp" alt="">
+                            <img src="assets/image/pro-4.webp" alt="">
                         </div>
                         <h3>2024 T1 Worlds Uniform Jersey</h3>
                         <h4>
@@ -307,7 +307,7 @@
         <div class="container">
             <div class="wrapper">
                 <div class="wrapper_img">
-                    <img src="/assets/image/logo.png" alt="">
+                    <img src="assets/image/logo.png" alt="">
                 </div>
                 <ul>
                     <li><a href="contact.html">Thông tin liên hệ</a></li>
@@ -340,11 +340,11 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- my js -->
-    <script src="/assets/js/home.js"></script>
-    <script src="/assets/js/header.js"></script>
+    <script src="assets/js/home.js"></script>
+    <script src="assets/js/header.js"></script>
 </body>
 
 </html>
