--- a/product.html
+++ b/product.html
@@ -7,10 +7,10 @@
     <title>Homepage</title>
 
     <!-- Add CSS file -->
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/product.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/product.css">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
         integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
@@ -22,7 +22,7 @@
     <div class="header">
         <div class="header_logo">
             <a href="homepage.html">
-                <img src="/assets/image/T1logo_square.webp" alt="">
+                <img src="assets/image/T1logo_square.webp" alt="">
             </a>
             <a href="" style="font-size: 24px;color:white">
                 T1
@@ -131,7 +131,7 @@
             <div class="content_box">
                 <div class="item" data-category="2024">
                     <div class="item_image">
-                        <img src="/assets/image/pro-1.webp" alt="">
+                        <img src="assets/image/pro-1.webp" alt="">
                     </div>
                     <h3>2024 T1 Worlds Uniform Jacket</h3>
                     <h4>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="item" data-category="2024">
                     <div class="item_image">
-                        <img src="/assets/image/fil-2.jpg" alt="">
+                        <img src="assets/image/fil-2.jpg" alt="">
                     </div>
                     <h3>2024 T1 Worlds Uniform Jersey</h3>
                     <h4>
@@ -167,7 +167,7 @@
                 </div>
                 <div class="item" data-category="2024">
                     <div class="item_image">
-                        <img src="/assets/image/fil-3.jpg" alt="">
+                        <img src="assets/image/fil-3.jpg" alt="">
                     </div>
                     <h3>2024 T1 World Champions Plushie Uniform Set</h3>
                     <h4>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="item" data-category="2024">
                     <div class="item_image">
-                        <img src="/assets/image/fil-4.png" alt="">
+                        <img src="assets/image/fil-4.png" alt="">
                     </div>
                     <h3>2024 T1 World Champions ZOFGK Keycap</h3>
                     <h4>
@@ -203,7 +203,7 @@
                 </div>
                 <div class="item" data-category="2024">
                     <div class="item_image">
-                        <img src="/assets/image/fil-5.png" alt="">
+                        <img src="assets/image/fil-5.png" alt="">
                     </div>
                     <h3>2024 T1 World Champions Ball Cap</h3>
                     <h4>
@@ -221,7 +221,7 @@
                 </div>
                 <div class="item" data-category="2023">
                     <div class="item_image">
-                        <img src="/assets/image/fil-6.png" alt="">
+                        <img src="assets/image/fil-6.png" alt="">
                     </div>
                     <h3>T1 Logo Badge - V5 Champions Edition</h3>
                     <h4>
@@ -239,7 +239,7 @@
                 </div>
                 <div class="item" data-category="2023">
                     <div class="item_image">
-                        <img src="/assets/image/fil-7.jpg" alt="">
+                        <img src="assets/image/fil-7.jpg" alt="">
                     </div>
                     <h3>2023 World Champions T1 Desk Mat Ver.2</h3>
                     <h4>
@@ -257,7 +257,7 @@
                 </div>
                 <div class="item" data-category="2023">
                     <div class="item_image">
-                        <img src="/assets/image/fil-8.jpg" alt="">
+                        <img src="assets/image/fil-8.jpg" alt="">
                     </div>
                     <h3>
                         2023 World Champions T1 Desk Mat Ver.1
@@ -277,7 +277,7 @@
                 </div>
                 <div class="item" data-category="pk">
                     <div class="item_image">
-                        <img src="/assets/image/fil-9.jpg" alt="">
+                        <img src="assets/image/fil-9.jpg" alt="">
                     </div>
                     <h3>
                         2024 T1 MSI T-Shirt Chengdu Edition - Navy</h3>
@@ -296,7 +296,7 @@
                 </div>
                 <div class="item" data-category="pk">
                     <div class="item_image">
-                        <img src="/assets/image/fil-10.jpg" alt="">
+                        <img src="assets/image/fil-10.jpg" alt="">
                     </div>
                     <h3>
                         2024 T1 MSI T-Shirt Chengdu Edition - White</h3>
@@ -315,7 +315,7 @@
                 </div>
                 <div class="item" data-category="dln">
                     <div class="item_image">
-                        <img src="/assets/image/fil-11.jpg" alt="">
+                        <img src="assets/image/fil-11.jpg" alt="">
                     </div>
                     <h3>T1 Player Mini Figure</h3>
                     <h4>
@@ -333,7 +333,7 @@
                 </div>
                 <div class="item" data-category="dln">
                     <div class="item_image">
-                        <img src="/assets/image/fil-12.jpg" alt="">
+                        <img src="assets/image/fil-12.jpg" alt="">
                     </div>
                     <h3>T1 20th Anniv. Faker Keychain</h3>
                     <h4>
@@ -351,7 +351,7 @@
                 </div>
                 <div class="item" data-category="dln">
                     <div class="item_image">
-                        <img src="/assets/image/fil-13.jpg" alt="">
+                        <img src="assets/image/fil-13.jpg" alt="">
                     </div>
                     <h3>
                         T1 20th Anniv. BoxeR Keychain</h3>
@@ -370,7 +370,7 @@
                 </div>
                 <div class="item" data-category="dln">
                     <div class="item_image">
-                        <img src="/assets/image/fil-14.jpg" alt="">
+                        <img src="assets/image/fil-14.jpg" alt="">
                     </div>
                     <h3>
                         T1 20th Anniversary Beer Glass</h3>
@@ -398,7 +398,7 @@
         <div class="container">
             <div class="wrapper">
                 <div class="wrapper_img">
-                    <img src="/assets/image/logo.png" alt="">
+                    <img src="assets/image/logo.png" alt="">
                 </div>
                 <ul>
                     <li><a href="contact.html">Thông tin liên hệ</a></li>
@@ -431,11 +431,11 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- my js -->
-    <script src="/assets/js/header.js"></script>
-    <script src="/assets/js/product.js"></script>
+    <script src="assets/js/header.js"></script>
+    <script src="assets/js/product.js"></script>
 </body>
 
 </html>
