--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <!-- header -->
     <div class="header">
         <div class="header_logo">
-            <a href="homepage.html">
+            <a href="index.html">
                 <img src="assets/image/T1logo_square.webp" alt="">
             </a>
             <a href="" style="font-size: 24px;color:white">
@@ -30,7 +30,7 @@
         <div class="header_body">
             <ul>
                 <li>
-                    <a href="homepage.html" class="">
+                    <a href="index.html" class="">
                         Trang chủ
                     </a>
                 </li>
@@ -70,7 +70,7 @@
         <div class="dropdown hide">
             <ul>
                 <li>
-                    <a href="homepage.html" class="">
+                    <a href="index.html" class="">
                         Trang chủ
                     </a>
                 </li>
@@ -290,7 +290,7 @@
                     <li>Email: t1@gg.vn</li>
                 </ul>
                 <ul class="wrapper_link">
-                    <li><a href="homepage.html">Trang chủ</a></li>
+                    <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
                     <li><a href=""> Sản phẩm</a></li>
                     <li><a href="">Tin tức</a></li>
