--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>index</title>
 
     <!-- Add CSS file -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
     <!-- header -->
     <div class="header">
         <div class="header_logo">
-            <a href="homepage.html">
+            <a href="index.html">
                 <img src="assets/image/T1logo_square.webp" alt="">
             </a>
             <a href="" style="font-size: 24px;color:white">
@@ -30,7 +30,7 @@
         <div class="header_body">
             <ul>
                 <li>
-                    <a href="homepage.html" class="">
+                    <a href="index.html" class="">
                         Trang chủ
                     </a>
                 </li>
@@ -70,7 +70,7 @@
         <div class="dropdown hide">
             <ul>
                 <li>
-                    <a href="homepage.html" class="">
+                    <a href="index.html" class="">
                         Trang chủ
                     </a>
                 </li>
@@ -317,7 +317,7 @@
                     <li>Email: t1@gg.vn</li>
                 </ul>
                 <ul class="wrapper_link">
-                    <li><a href="homepage.html">Trang chủ</a></li>
+                    <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
                     <li><a href=""> Sản phẩm</a></li>
                     <li><a href="">Tin tức</a></li>
