update news and detail

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>T1</title>
 
     <!-- Add CSS file -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
